# lgaircon

./: .gitignore  Cargo.toml  Cross.toml  Hasher.cpp  Hasher.hpp  README.md  app.sqlite  armv6.Dockerfile  armv7.Dockerfile  justfile  main.cpp  meson.build  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: rust-clippy.yml  rust.yml
CAD/: Cover.step  Enclosure.f3d  Full.FCStd  LGAircon Enclosure v3.f3d  LGAircon Enclosure.f3d  LGAircon Enclosure.step
elec/: elec.fzz
migrations/2022-08-23-220437_create_posts/: down.sql  up.sql
migrations/2022-09-03-215822_temp/: down.sql  up.sql
res/: boot_config.txt  lgAKB7383512.lircd.conf  lgaircon.service
scripts/: deploy.sh  deploy_zero.sh
src/: api.rs  db.rs  ds18b20.rs  ir.rs  lg_ac.rs  main.rs
src/db/: models.rs  schema.rs
subprojects/: pigpio.wrap
