[package]
name = "lgaircon"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-lirc-client-sys = "0.2.0"
diesel = { version = "2.0.0", features = ["sqlite"] }
diesel_migrations = "2.0.0"
tokio = {version = "1.21.0", features = ["full"]}
actix-web = "4.1.0"
serde = {version = "1.0.144", features = ["derive"]}
crossbeam-channel = "0.5.6"

[[bin]]
name = "lgaircon"
path = "src/main.rs"
