[package]
name = "lgaircon"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-lirc-client-sys = "0.2.0"
diesel = { version = "2.0.4", features = ["sqlite"] }
diesel_migrations = "2.0.0"
tokio = {version = "1.24.2", features = ["full"]}
actix-web = "4.3.1"
serde = {version = "1.0.144", features = ["derive"]}

[[bin]]
name = "lgaircon"
path = "src/main.rs"
