[package]
name = "lgaircon"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-lirc-client-sys = "0.2.0"
diesel = { version = "2.1.4", features = ["sqlite"] }
diesel_migrations = "2.1.0"
tokio = {version = "1.26.0", features = ["full"]}
actix-web = "4.1.0"
serde = {version = "1.0.156", features = ["derive"]}

[[bin]]
name = "lgaircon"
path = "src/main.rs"
